fix: spacing for category buttons

--- a/src/resources/sass/stylesheet.scss
+++ b/src/resources/sass/stylesheet.scss
@@ -227,3 +227,7 @@ label {
   justify-content: center;
   align-items: center;
 }
+
+.category-button {
+  margin: 3px;
+}
